--- a/Empty-S3-Bucket_Using_Lambda/Empty-S3-Bucket_Using_Lambda.yaml
+++ b/Empty-S3-Bucket_Using_Lambda/Empty-S3-Bucket_Using_Lambda.yaml
@@ -1,3 +1,7 @@
+---
+AWSTemplateFormatVersion: "2010-09-09"
+Description: "Clean S3 Bucket before Deleting"
+
 Parameters:
   S3BucketName:
     Type: String
