--- a/Codepipeline/wordpress-single-instance/prod-stack-configuration.json
+++ b/Codepipeline/wordpress-single-instance/prod-stack-configuration.json
@@ -4,6 +4,6 @@
     "DBPassword" : "mysupersecretprodpassword",
     "DBRootPassword" : "mysupersecretprodpassword",
     "DBUser" : "ProdDBuser",    
-    "KeyName" : "DemoKeyPair"
+    "KeyName" : "NVirginia"
   }
 }
